1999-08-14  Pascal Obry <obry@gnat.com>

	* xe_sysdep.ads, xe_sysdep-std.adb, xe_sysdep-nt.adb: System
	dependant functions to copy or remove a file, and to set the
	executable file's attribute. These files are needed to have a
	standalone (rely only on the standard system tools) gnatdist tool
	under NT.

	* xe_utils.adb: remove all usage of external tools here (rm, cp,
	mkdir and chmod), xe_utils now use the xe_sysdep services. Remove
	declaration of Chdir and use Directory_Operations.Change_Dir.

	* Makefile.am, Makefile.in: add missing parentheses around PSNAME
	variable. Add rules to select the right xe_sysdep unit and to
	build it.
	
1999-07-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: gnatdist was supposed to remove object and ali
 	files of rci units that are not configured on a partition. This
 	could happen when the user modifies the configuration file and
 	when rci units previously configured on a given partition are no
 	longer configured on it. The deletion was incorrect because the
 	filenames were incorrect.
	
1999-07-20  Pascal Obry  <obry@gnat.com>

	* xe_utils.ads: add some comments.

1999-07-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stdcnf.adb, xe.ads, xe_back.adb: Add a new pragma Priority to
 	allow a user to enable priority propagation or not. This pragma is
 	just declared in the configuration language. Nothing is generated
 	yet.

	* xe_utils.adb: When -bargs and -largs are passed on the command
 	line, Scan_Make_Arg switches into Binder or Linker mode. It is not
 	possible to add glade internal compiler arguments. Fix this
 	bug. This bug was detected in several regression tests in which
 	-bargs -f (ask gnatbind to follow ada rules) is needed.

1999-07-01  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stdcnf.adb: Change Link_Name into External_Name for pragma
 	Import.

	* xe_check.adb: Update Get_File_Name usage. We do not have
	subunits.
	
1999-05-20  Samuel Tardieu  <sam@inf.enst.fr>
